--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
     "recharts": "https://esm.sh/recharts@2.12.0?external=react,react-dom",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react,react-dom",
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.1?external=react,react-dom",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
 </script>
@@ -100,5 +102,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
